--- a/content/practicals/04-JAGSstart.html
+++ b/content/practicals/04-JAGSstart.html
@@ -38,7 +38,7 @@ bibliography: "../../static/bib/references.bib"
 <pre class="r"><code>N &lt;- 50  # le nombre d&#39;observations
 obs &lt;- rnorm(n = N, mean = 2, sd = 3)  # les observations (simulée)</code></pre></li>
 <li><p>Enregistrer dans un fichier <code>.txt</code> le modèle en <code>BUGS</code> défini à l’aide du code suivant :</p>
-<pre class="bugs"><code># Modèle
+<pre class="bash"><code># Modèle
 model{
 
   # Vraisemblance
@@ -92,28 +92,28 @@ resum</code></pre>
 ##    plus standard error of the mean:
 ## 
 ##        Mean     SD Naive SE Time-series SE
-## mu    2.592 0.4729 0.010575        0.01057
-## sigma 3.280 0.3332 0.007451        0.00830
+## mu    1.417 0.4171 0.009328       0.009658
+## sigma 2.964 0.3067 0.006858       0.006858
 ## 
 ## 2. Quantiles for each variable:
 ## 
-##        2.5%   25%   50%   75% 97.5%
-## mu    1.666 2.276 2.590 2.902 3.547
-## sigma 2.684 3.042 3.262 3.485 4.004</code></pre>
+##         2.5%   25%   50%   75% 97.5%
+## mu    0.6112 1.138 1.413 1.701 2.236
+## sigma 2.4371 2.744 2.941 3.156 3.624</code></pre>
 <pre class="r"><code>resum$statistics[&quot;mu&quot;, &quot;Mean&quot;]</code></pre>
-<pre><code>## [1] 2.591698</code></pre>
+<pre><code>## [1] 1.417054</code></pre>
 <pre class="r"><code>resum$statistics[&quot;sigma&quot;, &quot;Mean&quot;]</code></pre>
-<pre><code>## [1] 3.280049</code></pre>
+<pre><code>## [1] 2.963636</code></pre>
 <pre class="r"><code>resum$quantiles[&quot;mu&quot;, &quot;50%&quot;]</code></pre>
-<pre><code>## [1] 2.590401</code></pre>
+<pre><code>## [1] 1.41316</code></pre>
 <pre class="r"><code>resum$quantiles[&quot;sigma&quot;, &quot;50%&quot;]</code></pre>
-<pre><code>## [1] 3.2623</code></pre>
+<pre><code>## [1] 2.941281</code></pre>
 <pre class="r"><code>resum$quantiles[&quot;mu&quot;, c(1, 5)]</code></pre>
-<pre><code>##     2.5%    97.5% 
-## 1.665748 3.546797</code></pre>
+<pre><code>##      2.5%     97.5% 
+## 0.6111906 2.2362478</code></pre>
 <pre class="r"><code>resum$quantiles[&quot;sigma&quot;, c(1, 5)]</code></pre>
 <pre><code>##     2.5%    97.5% 
-## 2.684201 4.004152</code></pre></li>
+## 2.437123 3.624290</code></pre></li>
 <li><p>Charger le package <code>coda</code>. Il s’agit d’un package contenant un certain nombre de fonctions pour le diagnostic de convergence des algorithmes MCMC et le traitement des résultats.</p>
 <pre class="r"><code>library(coda)</code></pre></li>
 <li><p>Afin de pouvoir diagnostiquer la convergence d’un algorithme MCMC, il est nécessaire de générer plusieurs chaînes de Markov différentes, partant de valeurs initiales différentes. Recréer un objet <code>jags</code> en spécifiant l’utilisation de 3 chaines de Markov parallèles et en initialisant <code>mu</code> et <code>tau</code> à <span class="math inline">\((0; -10; 100)\)</span> et <span class="math inline">\((1; 0,01; 0.1)\)</span> respectivement (<strong>ProTip:</strong> utiliser une <code>list</code> de <code>list</code> — une pour chaque chaine). Commenter.</p>
@@ -151,20 +151,20 @@ cumuplot(res2, ask = FALSE, auto.layout = FALSE)</code></pre>
 <li><p>À l’aide de la fonction <code>hdi</code> du package <code>R</code> <code>HDInterval</code> donner les intervalles de crédibilités de plus haute densité <em>a posteriori</em> à 95%, et les comparer à ceux obtenu à partir des quantiles <span class="math inline">\(2,5\)</span>% et <span class="math inline">\(97,5\)</span>%.</p>
 <pre class="r"><code>hdCI &lt;- HDInterval::hdi(res2)
 hdCI</code></pre>
-<pre><code>##             mu    sigma
-## lower 1.651749 2.685474
-## upper 3.481203 3.988681
+<pre><code>##              mu    sigma
+## lower 0.5232886 2.431433
+## upper 2.2128793 3.584501
 ## attr(,&quot;credMass&quot;)
 ## [1] 0.95</code></pre>
 <pre class="r"><code>symCI &lt;- summary(res2)$quantiles[, c(1, 5)]
 symCI</code></pre>
-<pre><code>##           2.5%    97.5%
-## mu    1.654977 3.486186
-## sigma 2.701669 4.023435</code></pre>
+<pre><code>##            2.5%    97.5%
+## mu    0.5608571 2.252754
+## sigma 2.4477553 3.630992</code></pre>
 <pre class="r"><code>symCI[, 2] - symCI[, 1]</code></pre>
 <pre><code>##       mu    sigma 
-## 1.831209 1.321766</code></pre>
+## 1.691897 1.183237</code></pre>
 <pre class="r"><code>hdCI[2, ] - hdCI[1, ]</code></pre>
 <pre><code>##       mu    sigma 
-## 1.829454 1.303206</code></pre></li>
+## 1.689591 1.153068</code></pre></li>
 </ol>
