--- a/content/lectures/_index.html
+++ b/content/lectures/_index.html
@@ -19,8 +19,8 @@ Cliquer les différentes sous-sections afin d’accéder à leur contenu.</p>
 <h3>Diaporamas</h3>
 <ul>
 <li>Le diaporama complet couvrant les chapitres I &amp; II est téléchargeable <a href="/slides/BAYESdia.pdf">ici</a></li>
-<li>Le diaporama complet couvrant le chapitre III sera téléchargeable <a href="">ici</a></li>
-<li>Le diaporama complet couvrant le chapitre IV sera téléchargeable <a href="">ici</a></li>
+<li>Le diaporama complet couvrant le chapitre III est téléchargeable <a href="/slides/MCMCdia.pdf">ici</a></li>
+<li>Le diaporama complet couvrant le chapitre IV est téléchargeable <a href="/slides/BAYESAppdia.pdf">ici</a></li>
 </ul>
 </div>
 </div>
