--- a/content/schedule/index.html
+++ b/content/schedule/index.html
@@ -112,7 +112,7 @@ slug: schedule
 <td align="left"></td>
 <td align="left">16h30-17h</td>
 <td align="left">📹 👨‍💻 ✅ Correction sur zoom</td>
-<td align="left">Exercice 4</td>
+<td align="left"><a href="/td/04-exercice4/">Exercice 4</a></td>
 </tr>
 <tr class="even">
 <td align="left"><strong>Lundi 7 décembre</strong></td>
@@ -129,46 +129,28 @@ slug: schedule
 <tr class="even">
 <td align="left"></td>
 <td align="left">14h-16h</td>
-<td align="left">🎬 🍿 📖 Visionnage des vidéos et lectures en autonomie</td>
-<td align="left">Chapitre IV</td>
+<td align="left">🎬 🍿 📖 Lectures en autonomie</td>
+<td align="left"><a href="/cours/10-diffposterior/15-ecmo/">Chapitre IV</a> &amp; <a href="/readings/">Lectures</a></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">16h15-17h</td>
 <td align="left">📹 👨‍💻 ❓ Zoom questions-réponses</td>
-<td align="left">Chapitre IV</td>
+<td align="left"><a href="/cours/10-diffposterior/15-ecmo/">Chapitre IV</a> &amp; <a href="/readings/">Lectures</a></td>
 </tr>
 <tr class="even">
 <td align="left"><strong>Mercredi 9 décembre</strong></td>
 <td align="left">9h-12h</td>
 <td align="left">💻 📹 🗣 👥 Travaux pratiques en <em>break-out rooms</em> sur zoom</td>
-<td align="left">• Exercice 5: “Post-mortem Bayes” <br> • Exercice 6: “Bayesian meta-analysis” <br> • Exercice 7: “How not to report a CRM” <br></td>
+<td align="left">• <a href="/practicals/05-postmortem/">Exercice 5: “Post-mortem Bayes”</a> <br> • <a href="/practicals/06-bayesmetaCrins/">Exercice 6: “Méta-analyse bayésienne”</a> <br> • <a href="/practicals/07-CRM/">Exercice 7: “How not to report a CRM”</a> <br></td>
 </tr>
 <tr class="odd">
 <td align="left"><strong>Jeudi 10 décembre</strong></td>
-<td align="left">14h-14h45</td>
-<td align="left">📜 🖊 TD en autonomie</td>
-<td align="left">Exercice 3</td>
+<td align="left">14h-17h</td>
+<td align="left">📹 👨‍💻 ❓ Suivi de Projet</td>
+<td align="left"><a href="/projet/">Évaluation</a></td>
 </tr>
 <tr class="even">
-<td align="left"></td>
-<td align="left">15h-15h30</td>
-<td align="left">📹 👨‍💻 ✅ Correction sur zoom</td>
-<td align="left">Exercice 3</td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left">15h30pm- 16h15</td>
-<td align="left">📜 🖊 TD en autonomie</td>
-<td align="left">Exercice 4</td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left">16h30-17h</td>
-<td align="left">📹 👨‍💻 ✅ Correction sur zoom</td>
-<td align="left">Exercice 4</td>
-</tr>
-<tr class="odd">
 <td align="left"><strong>Mardi 15 décembre</strong></td>
 <td align="left">9h-12h</td>
 <td align="left">📹 👨‍💻 ❓ Suivi de Projet</td>
