--- a/content/practicals/06-bayesmetaCrins.html
+++ b/content/practicals/06-bayesmetaCrins.html
@@ -1,8 +1,8 @@
 ---
 title: "Exercice 6 : Méta-analyse bayésienne"
 linktitle: "Exercice 6 :  Méta-analyse bayésienne"
-date: "2020-06-25"
-read_date: "2020-06-25"
+date: "2020-11-30"
+read_date: "2020-12-09"
 menu:
   practicals:
     parent: "TP"
@@ -24,8 +24,8 @@ csl: "../../static/bib/chicago-syllabus-no-bib.csl"
 <li><p>Charger le package <code>R</code> <code>bayesmeta</code> <span class="citation">Christian Röver, “Bayesian Random-Effects Meta-Analysis Using the Bayesmeta R Package,” <em>arXiv Preprint 1711.08683</em> (2017), <a href="http://www.arxiv.org/abs/1711.08683" role="doc-biblioref">http://www.arxiv.org/abs/1711.08683</a>.</span> et les données de <span class="citation">Nicola D Crins et al., “Interleukin-2 Receptor Antagonists for Pediatric Liver Transplant Recipients: A Systematic Review and Meta-Analysis of Controlled Studies,” <em>Pediatric Transplantation</em> 18, no. 8 (2014): 839–850, doi:<a href="https://doi.org/10.1111/petr.12362" role="doc-biblioref">10.1111/petr.12362</a>.</span> avec la commande <code>R</code>:</p>
 <pre class="r"><code>library(bayesmeta)
 data(CrinsEtAl2014)</code></pre></li>
-<li><p>Explorer l’application <em>web</em> <code>shiny</code> accompagnat le package et disponbible à l’adresse : <a href="http://ams.med.uni-goettingen.de:3838/bayesmeta/app/" class="uri">http://ams.med.uni-goettingen.de:3838/bayesmeta/app/</a>. Commenter les sorties et resultats, essayer différentes loi <em>a priori</em>, etc.</p></li>
-<li><p>Maintenant depuis <code>R</code>, avec la fonction <code>escalc()</code> du package <code>metafor</code>, calculer les <em>log odds ratios</em> estimés à partir des 6 études considérées avec les variances d’échantillonnage associées (<strong>ProTip:</strong> lire la section <em>Measures for Dichotomous Variables</em> de l’aide de la fonction <code>escalc()</code>). Vérifier la cohérence avec l’application <code>shiny</code>en ligne (<strong>ProTip:</strong> <code>sigma</code> est l’écart-type, i.e. la racine carré de la variance d’échantillonnage <code>vi</code>)</p>
+<li><p>Explorer l’application <em>web</em> <code>shiny</code> accompagnant le <em>package</em> et disponible à l’adresse : <a href="http://ams.med.uni-goettingen.de:3838/bayesmeta/app/" class="uri">http://ams.med.uni-goettingen.de:3838/bayesmeta/app/</a>. Commenter les sorties et résultats, essayer différentes loi <em>a priori</em>, etc.</p></li>
+<li><p>Maintenant depuis <code>R</code>, avec la fonction <code>escalc()</code> du package <code>metafor</code>, calculer les <em>log odds ratios</em> estimés à partir des 6 études considérées avec les variances d’échantillonnage associées (<strong>ProTip :</strong> lire la section <em>Measures for Dichotomous Variables</em> de l’aide de la fonction <code>escalc()</code>). Vérifier la cohérence avec l’application <code>shiny</code> en ligne (<strong>NB :</strong> <code>sigma</code> est l’écart-type, i.e. la racine carré de la variance d’échantillonnage <code>vi</code>)</p>
 <pre class="r"><code>library(&quot;metafor&quot;)
 crins.es &lt;- escalc(measure = &quot;OR&quot;, ai = exp.AR.events, n1i = exp.total, ci = cont.AR.events, 
     n2i = cont.total, slab = publication, data = CrinsEtAl2014)
@@ -71,7 +71,7 @@ crins.es[, c(&quot;publication&quot;, &quot;yi&quot;, &quot;vi&quot;)]</code></p
 </tr>
 </tbody>
 </table>
-<p>Les log odds ratios (<em>OR</em>) sont symmétriques autour de zéros et ont leur distribution d’échantillonnage est plus proche d’une distribution Gaussienne que dans l’échelle narturelle des <em>OR</em>. C’est pourquoi ils sont généralement préférés dans le cadre des méta-analyses. Leur variances d’échantillonnage sont calculées comme la somme de l’inverse de tous les comptes dans le tableau de contingence <span class="math inline">\(2 \times 2\)</span> associé <span class="citation">Joseph L. Fleiss and Jesse A. Berlin, “Effect Sizes for Dichotomous Data,” in <em>The Handbook of Research Synthesis and Meta-Analysis, 2nd Ed</em> (New York, NY, US: Russell Sage Foundation, 2009), 237–253.</span></p></li>
+<p><strong>NB</strong> Les log odds ratios (<em>OR</em>) sont symmétriques autour de zéros et ont leur distribution d’échantillonnage est plus proche d’une distribution Gaussienne que dans l’échelle narturelle des <em>OR</em>. C’est pourquoi ils sont généralement préférés dans le cadre des méta-analyses. Leur variances d’échantillonnage sont calculées comme la somme de l’inverse de tous les comptes dans le tableau de contingence <span class="math inline">\(2 \times 2\)</span> associé <span class="citation">Joseph L. Fleiss and Jesse A. Berlin, “Effect Sizes for Dichotomous Data,” in <em>The Handbook of Research Synthesis and Meta-Analysis, 2nd Ed</em> (New York, NY, US: Russell Sage Foundation, 2009), 237–253.</span></p></li>
 <li><p>Effectuer une méta-analyse avec un effet-aléatoire sur ces données avec la fonction <code>bayesmeta()</code> du package <code>R</code> <code>bayesmeta</code>, depuis <code>R</code>. Utiliser une loi <em>a priori</em> uniforme sur <span class="math inline">\([0,4]\)</span> pour <span class="math inline">\(\tau\)</span> (la précision) et une loi <em>a priori</em> Gaussienne centrée autour de <span class="math inline">\(0\)</span> et avec un écart-type de 4 pour <span class="math inline">\(\mu\)</span> la moyenne.</p></li>
 <li><p>Écrire le modèle Bayésien correspondant à cette méta-analyse à effet aléatoire (mathématiquement, sans utilisé <code>R</code> — pour le moment).</p></li>
 <li><p>Utiliser <code>rjags</code> pour estimer ce même modèle, en enregistrant le model écrit en <code>BUGS</code> dans un fichier <code>.txt</code> (nommé <code>crinsBUGSmodel.txt</code> par exemple). Commenter vos résultats.</p></li>
