--- a/content/cours/16-meta-analyses.html
+++ b/content/cours/16-meta-analyses.html
@@ -39,7 +39,7 @@ output:
 <p>Le modèle à effets aléatoires est l’une des approches les plus courante pour la méta-analyse. Ce modèle peut s’écrire ainsi :</p>
 <p><span class="math display">\[y_i \sim \mathcal{N}(\theta_i, \sigma_i^2) \]</span>
 <span class="math display">\[\theta_i \sim \mathcal{N}(\mu, \tau^2)\]</span></p>
-<p>On peut l’envisager comme une généralisation hiérarchique du modèle à effet fixe <span class="math inline">\(y_i \sim \mathcal{N}(\mu, \sigma_i^2)\)</span>, qui suppose lui le même effet moyen dans chaque étude inclus, tandis que le modèle à effets aléatoires permet de modéliser la variabilité entre études autour de cet effet moyen grâce au paramètre <span class="math inline">\(\tau\)</span> : <span class="math inline">\(y_i \sim \mathcal{N}(\mu, \sigma_i^2 + \tau)\)</span>.</p>
+<p>On peut l’envisager comme une généralisation hiérarchique du modèle à effet fixe <span class="math inline">\(y_i \sim \mathcal{N}(\mu, \sigma_i^2)\)</span>, qui suppose lui le même effet moyen dans chaque étude inclus, tandis que le modèle à effets aléatoires permet de modéliser la variabilité entre études autour de cet effet moyen grâce au paramètre <span class="math inline">\(\tau^2\)</span> : <span class="math inline">\(y_i \sim \mathcal{N}(\mu, \sigma_i^2 + \tau^2)\)</span>.</p>
 </div>
 </div>
 <div id="la-méta-analyse-en-pratique" class="section level3">
