--- a/content/practicals/07-CRM.html
+++ b/content/practicals/07-CRM.html
@@ -2,7 +2,7 @@
 title: "Exercice 7 : comment NE PAS reporter un essai en CRM"
 linktitle: "Exercice 7 : essai en CRM"
 date: "2020-11-30"
-read_date: "2020-12-10"
+exo_date: "2020-12-10"
 menu:
   practicals:
     parent: "TP"
