--- a/content/practicals/08-Boot.html
+++ b/content/practicals/08-Boot.html
@@ -2,7 +2,7 @@
 title: "Exercice BONUS : Bootstrap pour le t-test (alias: Monte-Carlo, le retour)"
 linktitle: "Exercice BONUS : Monte-Carlo, le retour"
 date: "2020-11-30"
-read_date: "2020-12-10"
+exo_date: "2020-12-10"
 menu:
   practicals:
     parent: "TP"
