--- a/content/practicals/05-postmortem.html
+++ b/content/practicals/05-postmortem.html
@@ -2,7 +2,7 @@
 title: "Exercice 5 : Ré-analyse bayésienne post-mortem d’un essai clinique randomisé sous-dimensionné"
 linktitle: "Exercice 5 : Réanalyse bayésienne post-mortem"
 date: "2020-11-30"
-read_date: "2020-12-08"
+exo_date: "2020-12-08"
 menu:
   practicals:
     parent: "TP"
@@ -136,7 +136,7 @@ res_goligher_burnt_pop &lt;- window(res_goligher_pop, start = 5001)  #retirer la
 <li><p>Évaluer la convergence, puis commenter les résultats et les estimations (<strong>ProTip:</strong> la fonction <code>R</code> <code>effectiveSize()</code> du package <code>coda</code> permet de calculer la taille d’échantillon effective).</p>
 <pre class="r"><code>effectiveSize(res_goligher_burnt_pop)</code></pre>
 <pre><code>##       RR       pc 
-## 13326.43 14070.26</code></pre>
+## 12886.54 13056.44</code></pre>
 <pre class="r"><code>plot(res_goligher_burnt_pop)</code></pre>
 <p><img src="/practicals/05-postmortem_files/figure-html/goligher-diagnoses-1.png" width="672" /></p>
 <pre class="r"><code>gelman.plot(res_goligher_burnt_pop)</code></pre>
@@ -158,15 +158,15 @@ summary(res_goligher_burnt_pop)</code></pre>
 ## 1. Empirical mean and standard deviation for each variable,
 ##    plus standard error of the mean:
 ## 
-##      Mean      SD  Naive SE Time-series SE
-## RR 0.7775 0.12063 0.0005506      0.0010455
-## pc 0.4566 0.04373 0.0001996      0.0003688
+##      Mean     SD  Naive SE Time-series SE
+## RR 0.7796 0.1214 0.0005542      0.0010701
+## pc 0.4562 0.0439 0.0002004      0.0003844
 ## 
 ## 2. Quantiles for each variable:
 ## 
-##      2.5%    25%    50%   75%  97.5%
-## RR 0.5633 0.6924 0.7686 0.854 1.0367
-## pc 0.3723 0.4265 0.4568 0.486 0.5431</code></pre>
+##      2.5%    25%    50%    75%  97.5%
+## RR 0.5650 0.6950 0.7707 0.8556 1.0419
+## pc 0.3716 0.4264 0.4561 0.4860 0.5423</code></pre>
 <pre class="r"><code>summary(res_goligher_burnt_indiv)</code></pre>
 <pre><code>## 
 ## Iterations = 5001:21000
@@ -178,24 +178,24 @@ summary(res_goligher_burnt_pop)</code></pre>
 ##    plus standard error of the mean:
 ## 
 ##      Mean      SD  Naive SE Time-series SE
-## RR 0.7797 0.08312 0.0003794      0.0006019
-## pc 0.4565 0.03900 0.0001780      0.0002831
+## RR 0.7803 0.08377 0.0003823      0.0006136
+## pc 0.4565 0.03959 0.0001807      0.0002916
 ## 
 ## 2. Quantiles for each variable:
 ## 
 ##      2.5%    25%    50%    75%  97.5%
-## RR 0.6286 0.7216 0.7752 0.8331 0.9543
-## pc 0.3813 0.4298 0.4563 0.4825 0.5339</code></pre>
+## RR 0.6285 0.7222 0.7757 0.8341 0.9564
+## pc 0.3803 0.4295 0.4560 0.4832 0.5347</code></pre>
 <pre class="r"><code># shortest 95% Credibility interval:
 HDInterval::hdi(res_goligher_burnt_pop)</code></pre>
 <pre><code>##              RR        pc
-## lower 0.5475413 0.3743449
-## upper 1.0151128 0.5449928
+## lower 0.5515003 0.3706865
+## upper 1.0230582 0.5412828
 ## attr(,&quot;credMass&quot;)
 ## [1] 0.95</code></pre>
 <pre class="r"><code># posterior porbability of RR &lt;1:
 mean(c(sapply(res_goligher_burnt_pop, &quot;[&quot;, , 1)) &lt; 1)</code></pre>
-<pre><code>## [1] 0.9575833</code></pre></li>
+<pre><code>## [1] 0.9554583</code></pre></li>
 <li><p>Changer pour une loi <em>a priori</em> plus informative en utilisant une distribution
 Gaussienne pour le <span class="math inline">\(log(RR)\)</span>, centrée en <code>log(0.78)</code> et avec un écart-type de <code>0.15</code> (dans l’échelle du log(RR), ce qui correspond à une précision <span class="math inline">\(\approx 45\)</span>). Commenter les resultats. Essayer d’autres distributions <em>a priori</em>.</p>
 <pre class="bash"><code> logRR~dnorm(log(0.78), 45)</code></pre></li>
